# ml-projects

./: README.md  pyproject.toml
ensembles/: about.md  decision_tree.py  random_forest.py  test_decision_tree.py  test_random_forest.py
linear-regression/: about.md  scratch.py
linear_regression/: common.py  multivariate.py  simple.py
logistic_regression/: about.md  simple.py
neural-networks/: about.md
transformers/: about.md
