[project]
name = "ml-projects"
version = "0.1.0"
description = "ml-projects: A collection of machine learning projects implemented in Python."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "matplotlib>=3.10.0",
  "pandas>=2.0.0",
  "scikit-learn>=1.4.0",
  "typer>=0.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["linear_regression"]

[dependency-groups]
dev = []
