[project]
name = "ml-projects"
version = "0.1.0"
description = "ml-projects: A collection of machine learning projects implemented in Python."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "matplotlib>=3.10.0",
  "pandas>=2.0.0",
  "scikit-learn>=1.4.0",
  "seaborn>=0.13.2",
  "typer>=0.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
  "linear_regression",
  "ensembles",
  "logistic_regression",
  "neural_networks",
  "transformers",
]

[dependency-groups]
dev = []
test = [
    "pytest>=9.0.2",
]
